--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,3 +2,88 @@
 @import "./utils/config";
 // footer component
 @import "./components/footer";
+
+.nav {
+  padding: 1rem;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: auto auto;
+  align-items: center;
+  &-logo {
+    height: 1.7rem;
+  }
+  &-links-container {
+    display: none;
+  }
+}
+// sidebar
+.sidebar {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.249);
+  background: transparent;
+  .sidebar-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 1.5rem 1rem;
+    background: $cl_offwhite;
+    height: 100vh;
+    width: 55vw;
+    transform: translateX(100%);
+    &-closebtn {
+      margin-left: auto;
+      margin-right: 0.5rem;
+    }
+    &-links {
+      padding: 1rem 0.5rem;
+      margin-top: 3rem;
+      li {
+        padding: 0.7rem 0;
+        a {
+          font-weight: $weight_2;
+          color: $cl_verydarkblue;
+        }
+      }
+    }
+  }
+}
+.section {
+  width: 92vw;
+  margin: 0 auto;
+  max-width: 1440px;
+}
+.header {
+  &-left {
+    &-header {
+      width: 100%;
+    }
+    &-content {
+      &-header {
+        font-size: 3rem;
+        line-height: 1;
+        padding: 1.5rem 0;
+        font-weight: $weight_3;
+      }
+      &-desc {
+        &-text {
+          color: $cl_darkgrayishblue;
+          line-height: 1.5;
+        }
+        &-btn {
+          background: $cl_softred;
+          color: white;
+          text-transform: uppercase;
+          letter-spacing: 0.3rem;
+          font-weight: $weight_2;
+          padding: 1rem 1.5rem;
+          margin: 1.8rem 0;
+        }
+      }
+    }
+  }
+}
