--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -7,3 +7,7 @@ $cl-offwhite: hsl(36, 100%, 99%);
 $cl_grayishblue: hsl(233, 8%, 79%);
 $cl_darkgrayishblue: hsl(236, 13%, 42%);
 $cl_verydarkblue: hsl(240, 100%, 5%);
+// font weight
+$weight_1: 400;
+$weight_2: 700;
+$weight_3: 800;
