--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ ul {
 
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 button,
@@ -48,4 +49,83 @@ footer {
 .attribution a {
   font-weight: bold;
   color: hsl(228deg, 45%, 44%);
+}
+
+.nav {
+  padding: 1rem;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: auto auto;
+  align-items: center;
+}
+.nav-logo {
+  height: 1.7rem;
+}
+.nav-links-container {
+  display: none;
+}
+
+.sidebar {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.249);
+  background: transparent;
+}
+.sidebar .sidebar-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 1.5rem 1rem;
+  background: hsl(36deg, 100%, 99%);
+  height: 100vh;
+  width: 55vw;
+  transform: translateX(100%);
+}
+.sidebar .sidebar-container-closebtn {
+  margin-left: auto;
+  margin-right: 0.5rem;
+}
+.sidebar .sidebar-container-links {
+  padding: 1rem 0.5rem;
+  margin-top: 3rem;
+}
+.sidebar .sidebar-container-links li {
+  padding: 0.7rem 0;
+}
+.sidebar .sidebar-container-links li a {
+  font-weight: 700;
+  color: hsl(240deg, 100%, 5%);
+}
+
+.section {
+  width: 92vw;
+  margin: 0 auto;
+  max-width: 1440px;
+}
+
+.header-left-header {
+  width: 100%;
+}
+.header-left-content-header {
+  font-size: 3rem;
+  line-height: 1;
+  padding: 1.5rem 0;
+  font-weight: 800;
+}
+.header-left-content-desc-text {
+  color: hsl(236deg, 13%, 42%);
+  line-height: 1.5;
+}
+.header-left-content-desc-btn {
+  background: hsl(5deg, 85%, 63%);
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  font-weight: 700;
+  padding: 1rem 1.5rem;
+  margin: 1.8rem 0;
 }
