--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,9 +2,13 @@
 @import "./utils/config";
 // footer component
 @import "./components/footer";
-
+.section {
+  width: 355px;
+  margin: 0 auto;
+  max-width: 1440px;
+}
 .nav {
-  padding: 1rem;
+  padding: 1rem 0;
   display: grid;
   justify-content: space-between;
   grid-template-columns: auto auto;
@@ -14,6 +18,10 @@
   }
   &-links-container {
     display: none;
+  }
+  &-closebtn {
+    // justify-self: end;
+    // margin-left: auto;
   }
 }
 // sidebar
@@ -52,11 +60,6 @@
     }
   }
 }
-.section {
-  width: 92vw;
-  margin: 0 auto;
-  max-width: 1440px;
-}
 .header {
   &-left {
     &-header {
@@ -83,6 +86,64 @@
           padding: 1rem 1.5rem;
           margin: 1.8rem 0;
         }
+      }
+    }
+  }
+  &-news {
+    background-color: $cl_verydarkblue;
+    color: $cl-offwhite;
+    padding: 1.5rem 1rem;
+    h1 {
+      color: $cl_softorange;
+      margin-bottom: 0.5rem;
+    }
+    div {
+      padding: 2rem 0;
+      border-bottom: 1px solid $cl_darkgrayishblue;
+      h2 {
+        font-size: 1.4rem;
+      }
+      p {
+        color: $cl_grayishblue;
+        padding: 1rem 0 0.5rem 0;
+      }
+    }
+    .new-3 {
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
+}
+// articles
+.articles {
+  margin-top: 4rem;
+  margin-bottom: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  // background: gold;
+  article {
+    display: flex;
+    align-items: center;
+    gap: 0 1.5rem;
+    img {
+      height: 10rem;
+      object-fit: cover;
+    }
+    div {
+      flex: 0 0 60%;
+      h1 {
+        font-size: 2rem;
+        color: $cl_grayishblue;
+      }
+      h2 {
+        font-size: 1.2rem;
+        margin: 0.8rem 0;
+        font-weight: $weight_3;
+      }
+      p {
+        line-height: 1.5;
+        color: $cl_darkgrayishblue;
       }
     }
   }
