--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -11,3 +11,5 @@ $cl_verydarkblue: hsl(240, 100%, 5%);
 $weight_1: 400;
 $weight_2: 700;
 $weight_3: 800;
+// transition
+$transition: all 200ms linear;
